# ghostroot

./: .env.example  .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
data/: artifacts.json  research_log.json  research_questions.json
src/ghostroot/: __init__.py  config.py  run.py  tools.py
src/ghostroot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ghostroot/agents/: context_researcher.py  researcher.py  speaker.py
tests/: test_tools.py
