[project]
name = "ghostroot"
version = "0.1.0"
description = "A multi-agent archaeology of language: reconstructing a lost proto-tongue from fragments, echoes, and scholarly disagreement."
requires-python = ">=3.11"
authors = [
  { name = "You" }
]

dependencies = [
  "python-dotenv>=1.0.0",
  "rich>=13.7.0"
]

[project.optional-dependencies]
openai = [
  "openai>=1.0.0",
  "openai-agents>=0.0.1"
]

[project.scripts]
ghostroot = "ghostroot.run:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
